@@ -7,7 +7,7 @@
 #fi
 php php/boot-fs.php products all || echo "ERROR LINE" $LINENO
 php php/boot-fs.php sites create --name=behat-test --label=behattest --product='wordpress' --org='d59379eb-0c23-429c-a7bc-ff51e0a960c2' || echo "ERROR LINE" $LINENO
-php php/boot-fs.php site info --site=behat-test --nocache=1 || echo "ERROR LINE" $LINENO
+php php/boot-fs.php site info --site=behat-test || echo "ERROR LINE" $LINENO
 php php/boot-fs.php site backup create --site=behat-test --env=dev --element=all || echo "ERROR LINE" $LINENO
 php php/boot-fs.php site environments --site=behat-test || echo "ERROR LINE" $LINENO
 php php/boot-fs.php site backup get --site=behat-test --env=dev --element=files --latest || echo "ERROR LINE" $LINENO
