@@ -23,6 +23,7 @@ All notable changes to this project starting with the 0.6.0 release will be docu
 - `products` is now `upstreams` (#404)
 - The `--product` flag on `sites create` is now `--upstream` (#404)
 - `site backup` is now `site backups` (#416)
+- The `--nocache` flag has been removed (#415)
 
 ### Deprecated
 - `sites delete` will be removed in v1.0.0 (#370)
